k8s/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
  - host: agent-front.space.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p1-frontend-service
            port:
              number: 80
